# FedLearn

./: .gitignore  Cargo.toml  FedLearn End Product Explainer.docx  FedLearn End Product Explainer.txt  FedLearn Implementation Execution Guide.md  FedLearn Issue Resolution Ledger.md  FedLearn Learning Map Functions and Interactions.md  FedLearn PRD.docx  FedLearn Risk and Considerations Register.md  FedLearn Technical Specification.docx  benchmark_results.json  package-lock.json  package.json  test.mjs
crates/fedlearn-core/: Cargo.toml
crates/fedlearn-core/src/: determinism.rs  lib.rs
crates/fedlearn-core/src/adapter/: cold_start.rs  dar.rs  lora.rs  mod.rs
crates/fedlearn-core/src/continual/: ewc.rs  gem.rs  mod.rs
crates/fedlearn-core/src/crypto/: mod.rs  secagg.rs  sketch.rs
crates/fedlearn-core/src/federation/: fedprox.rs  mod.rs  scaffold.rs
crates/fedlearn-core/src/privacy/: budget.rs  dp_sgd.rs  he.rs  mod.rs  renyi.rs
crates/fedlearn-core/src/session/: mod.rs  session.rs  ssc.rs
crates/fedlearn-core/tests/: accountant_validation.rs  adapter.rs  continual.rs  cross_backend.rs  crypto.rs  federation.rs  privacy.rs  session.rs
crates/fedlearn-server/: Cargo.toml
crates/fedlearn-server/src/: byzantine.rs  lib.rs  main.rs  round.rs  trust.rs
crates/fedlearn-server/tests/: adversarial.rs  byzantine.rs  round.rs
demo/: demo.mjs
docs/: API_REFERENCE.md  ARCHITECTURE.md  BROWSER_GUIDE.md  EFFICIENCY_COMPARISON_REPORT.md  FRIEND_VALIDATION_PRIVACY.md  MCP_INTEGRATION.md  PRIVACY_GUARANTEES.md  VALIDATION_RUNBOOK.md  WATCHER_FRIEND_VALIDATION.md
(+26 files in other folders)
