[package]
name = "fedlearn-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hkdf = "0.12.4"
hmac = "0.12.1"
nalgebra = "0.32.6"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
thiserror = "1.0.58"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chacha20 = "0.9.1"

[dev-dependencies]
static_assertions = "1"

