[package]
name = "fedlearn-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
fedlearn-core = { path = "../fedlearn-core" }
axum = { version = "0.7.5", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

